#3 - Add Directive Support

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div id="title"></div>
+        <div id="directive"></div>
 
         <script src="build/app.js" type="application/javascript;version=1.7"></script>
     </body>
