--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,6 @@
     <body>
         <div id="directive"></div>
 
-        <script src="build/app.js" type="application/javascript;version=1.7"></script>
+        <script src="build/app.js" type="application/javascript"></script>
     </body>
 </html>
