Updating index.html on example

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
 
         <title>eXtended demo</title>
+        <link href="https://necolas.github.io/normalize.css/3.0.2/normalize.css" rel="stylesheet" />
+        <link href="public/css/style.css" rel="stylesheet" />
         <script src="build/app.js" type="application/javascript" defer></script>
     </head>
 
